@@ -54,7 +54,8 @@ in these examples is L<on GitHub|https://github.com/sqitchers/sqitch-mysql-intro
 Now that we have a repository, let's get started with Sqitch. Every Sqitch
 project must have a name associated with it, and, optionally, a unique URI. We
 recommend including the URI, as it increases the uniqueness of object
-identifiers internally, so let's specify one when we initialize Sqitch:
+identifiers internally, and will prevent the deployment of a different project
+with the same name. So let's specify one when we initialize Sqitch:
 
   > sqitch init flipr --uri https://github.com/sqitchers/sqitch-mysql-intro/ --engine mysql
   Created sqitch.conf
